--- a/src_plain/test.html
+++ b/src_plain/test.html
@@ -12,7 +12,7 @@ video{
 </style>
     </head>
     <body>
-			<h1>Peer-to-Peer Cue System --- ID <a id="peer_id" href=""></span></h1>
+			<h1>Peer-to-Peer Cue System --- ID <a id="peer_id" href=""></a></h1>
 			<button id="connect_b">connect video</button>
 			<button id="con_b">connect to peer</button>
 			<button id="call_b">call to peer</button>
