--- a/src_plain/test.html
+++ b/src_plain/test.html
@@ -9,6 +9,7 @@
 video{
 	border: solid 1px red;
 }
+.inline{ display: inline-block; }
 </style>
     </head>
     <body>
@@ -17,8 +18,16 @@ video{
 			<button id="con_b">connect to peer</button>
 			<button id="call_b">call to peer</button>
 			<button id="end_b">end call to peer</button>
-video_out<video id="video_out" ></video>
-video_in<video id="video_in" ></video>
+			<br />
+			<br />
+			<div class="inline">
+				<div>video_out</div>
+				<video id="video_out" ></video>
+			</div>
+			<div class="inline">
+				<div>video_in</div>
+				<video id="video_in" ></video>
+			</div>
 
 <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
 <script>
