video test working but not in call

--- a/src_plain/index.html
+++ b/src_plain/index.html
@@ -19,8 +19,13 @@ video{
 	border: solid 1px black 
 }
 .padding{
-	padding: 10px;
+	padding: 5px;
 }
+.limit-height{
+	max-height: 200px;
+	overflow: auto;
+}
+.inline{ display: inline-block; }
 </style>
 <script type="module" src="./app.js"></script>
     </head>
