--- a/src_plain/index.html
+++ b/src_plain/index.html
@@ -26,6 +26,9 @@ video{
 	overflow: auto;
 }
 .inline{ display: inline-block; }
+.underline{
+	border-bottom: solid 1px black;
+}
 </style>
 <script type="module" src="./app.js"></script>
     </head>
