--- a/src_plain/index.html
+++ b/src_plain/index.html
@@ -2,12 +2,23 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width">
+				<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Peer-to-Peer</title>
         <link rel="stylesheet" href="style.css">
 <style>
+body,input, button {
+  background-color: black;
+  color: lightgreen;
+	margin: 0;
+}
+input, button {
+  border: lightgreen solid 1px;
+}
 video{
 	border: solid 1px red;
+}
+pre{
+	overflow: auto;
 }
 .center{ 
 	text-align: center;
@@ -16,10 +27,13 @@ video{
 
 }
 .border{
-	border: solid 1px black 
+	border: solid 1px lightgreen 
 }
 .padding{
 	padding: 5px;
+}
+.float-left{
+  text-align: left;
 }
 .limit-height{
 	max-height: 200px;
@@ -27,7 +41,34 @@ video{
 }
 .inline{ display: inline-block; }
 .underline{
-	border-bottom: solid 1px black;
+	border-bottom: solid 1px lightgreen;
+}
+#root{
+	max-width: 1000px;
+    margin: auto;
+}
+.controlls button{
+	display: inline-block;
+}
+
+.messageIn input,
+.messageIn button
+{
+	display: inline-block;
+}
+
+@media only screen and (max-width: 600px) {
+	  body,input, button {
+			font-size:20px;
+
+		}
+		input, button{
+			display: block;
+		  text-align: center;
+		  margin: auto;
+	    margin-bottom: 10px;
+		}
+
 }
 </style>
 <script type="module" src="./app.js"></script>
@@ -36,7 +77,7 @@ video{
 			<div class="center padding" >
 				Peer-to-Peer
 			</div>
-			<div id="root" class="padding border" ></div>
+			<div id="root" class="padding border center" ></div>
 		</body>
 </html>
 
